--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="../web 1/css/css.css">
+    <link rel="stylesheet" href="css/css.css">
   </head>
   <body>
     <a href="#"> <span> Button</span></a>
